--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -1,5 +1,6 @@
 {
   "notification": {
-    "post": "publicou algo agora."
+    "post": "publicou algo agora.",
+    "comment": "comentou algo agora."
   }
 }
