change texts + more logs on errors for sending notifications + send image and time in notification

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "notification": {
     "post": "just published something.",
-    "comment": "just commented something."
+    "comment": "just commented a post from {{name}}."
   }
 }
