--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -1,6 +1,6 @@
 {
   "notification": {
     "post": "publicou algo agora.",
-    "comment": "comentou algo agora."
+    "comment": "comentou um post de {{name}} agora."
   }
 }
